# MINI-KV

./: Cargo.toml  README-EN.md  README.md
benches/: engine_bench.rs
data/sled/: db
src/: client.rs  common.rs  error.rs  lib.rs  server.rs
src/engines/: kvs.rs  mod.rs  sled.rs
src/thread_pool/: mod.rs  native.rs  shard.rs
tests/: cli.rs  kv_store.rs  tests2.rs
