[package]
name = "kvs"
version = "0.1.0"
authors = ["shaozhou"]
description = "A key-value store"
edition = "2024"

[dependencies]
assert_cmd = "0.11.0"
clap = {version = "4.5.32", features = ["derive"]}
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
bincode = "2.0.1"
rand = "0.6.5"
ctrlc = "3.2"
log = "0.4"
env_logger = "0.11"
sled = "0.34.6"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1"
crossbeam-utils = "0.8"
chrono = "0.4"
tokio = { version = "1.37", features = ["full"] }
termcolor = "1.4"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "engine_bench"
harness = false
